<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="mab.taif_university_guidance.user.SelectionUserActivity">


    <ImageView
        android:src="@drawable/taif"
        android:layout_gravity="center"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/button_login_visitor"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight=".5"
        android:background="@drawable/button_style"
        android:text="@string/enter_as_visitor"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:background="@drawable/button_style" />

    <Button
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:id="@+id/button_register"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:background="@drawable/button_style"
        android:layout_width="300dp"
        android:layout_height="0dp"
        />

</LinearLayout>
